# chat-grupo-wpp-analysis

./: .gitignore  001_take_messages.ipynb  002_create_dataframe.ipynb  003_plots_for_messages.ipynb  004_plots_for_words.ipynb  005_plots_for_extra_features.ipynb  README.md  pyproject.toml
data/: .gitignore  README.md
data/analysis/: README.md
data/whatsapp/: folders.json
python_files/: __init__.py  booleans.py  constants.py  objs.py
